# fricat

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: go2rtc-upstream-reconnect-discontinuity.md
fricat/: __main__.py  backfill.py  check_segments.py  cli.py  concat.py  index.py  media.py  metrics.py  prune.py  repair.py  sidecar.py  utils.py  web.py  webapp.py
fricat/static/: app.js  index.html  styles.css
scripts/: confirm_audio_reconnect.sh  generate_one_hour_clip.sh  prune_json_without_audio_dbfs.py  simulate_proxmox_network_outage.sh
tests/: test_check_segments.py  test_concat.py  test_media.py  test_repair.py  test_webapp.py
