[project]
name = "fricat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.135.1",
    "prometheus-client>=0.23.1",
    "tqdm>=4.67.3",
    "tzdata>=2025.3",
    "uvicorn>=0.30.0",
]

[project.scripts]
fricat = "fricat.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
